--- a/minicpm/main.ipynb
+++ b/minicpm/main.ipynb
@@ -117,7 +117,9 @@
   {
    "cell_type": "markdown",
    "id": "0fc00ac1-915e-44b7-bbaa-9dc7c8a15c31",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "#### helpers"
    ]
@@ -158,14 +160,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2c209450-7708-459f-a50f-ac4967a6395c",
+   "metadata": {},
+   "source": [
+    "#### THING TO CHANGE"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "5f484fc6-3ebc-4d05-8954-b8a129c3dac6",
    "metadata": {},
    "outputs": [],
    "source": [
     "def eval_img(file_path, ground_truths, img_path, img_context, question, temperature, filename):\n",
     "\n",
+    "    # just make the code here have your model take in:\n",
+    "    # image, context, question, and temp \n",
+    "    # return the result as res\n",
+    "    \n",
     "    tokenizer = AutoTokenizer.from_pretrained('openbmb/MiniCPM-V-2', trust_remote_code=True)\n",
     "    model.eval()\n",
     "    full_image = os.path.join(file_path, img_path)\n",
@@ -187,7 +201,7 @@
     "    )\n",
     "    save_to_csv(img_context, question, img_path, res, ground_truth, filename + \".csv\")\n",
     "        \n",
-    "    return res, img"
+    "    return res"
    ]
   },
   {
@@ -208,17 +222,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing Images:  39%|███▉      | 465/1189 [07:43<13:37,  1.13s/it]"
+      "Processing Images:  67%|██████▋   | 791/1189 [13:02<06:57,  1.05s/it]"
      ]
     }
    ],
    "source": [
+    "# vars to change, should be self explanatory, file_path is just test vs train\n",
+    "# filename is where to save stuff\n",
     "file_path = \"../test_im_data\"\n",
-    "file_path_l = os.path.join(file_path, \"labels\")\n",
     "temperature = 0.7\n",
     "context = 'You are a pathologist examing cell imagery.'\n",
     "question = 'Identify the count of ecDNA. Return a numerical answer only'\n",
     "filename = 'test'\n",
+    "\n",
+    "file_path_l = os.path.join(file_path, \"labels\")\n",
     "\n",
     "ground_truth = load_ground_truths(file_path)\n",
     "\n",
@@ -227,8 +244,8 @@
     "\n",
     "results = []\n",
     "for img_str in tqdm(files, desc=\"Processing Images\"):\n",
-    "    res, img = eval_img(file_path_l, ground_truth, img_str, context, question, temperature, filename)\n",
-    "    results.append((img_str, res, img))"
+    "    res = eval_img(file_path_l, ground_truth, img_str, context, question, temperature, filename)\n",
+    "    results.append((img_str, res))"
    ]
   },
   {
