new runs of test.csv

--- a/minicpm/main.ipynb
+++ b/minicpm/main.ipynb
@@ -54,7 +54,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7fc4680558d0>"
+       "<torch._C.Generator at 0x7ff1f23098f0>"
       ]
      },
      "execution_count": 2,
@@ -96,7 +96,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d9f0e0f888204a3aa024b843763214fa",
+       "model_id": "26172ef89c734493ab29a7b98d00433f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -126,12 +126,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "id": "6f0f8180-dc92-4fe6-b8a7-1b9ef530538b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def save_to_csv(context, question, image_str, output, actual, filename='output.csv'):\n",
+    "def save_to_csv(context, question, temperature, image_str, output, actual, filename='output.csv'):\n",
     "    # Check if the file already exists\n",
     "    file_exists = os.path.isfile(filename)\n",
     "    \n",
@@ -140,15 +140,15 @@
     "        writer = csv.writer(file)\n",
     "        # If the file does not exist, write the headers\n",
     "        if not file_exists:\n",
-    "            writer.writerow(['Context', 'Question', 'Image_Path', 'Output', 'Actual'])\n",
+    "            writer.writerow(['Context', 'Question', 'Temperature', 'Image_Path', 'Output', 'Actual'])\n",
     "            file_exists = True\n",
     "        # Write the data row\n",
-    "        writer.writerow([context, question, image_str, output, actual])"
+    "        writer.writerow([context, question, temperature, image_str, output, actual])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "id": "13aab4af-8dea-4f3e-af88-5f29291983cb",
    "metadata": {},
    "outputs": [],
@@ -161,6 +161,113 @@
   },
   {
    "cell_type": "markdown",
+   "id": "16c6d6fe-fcf2-471f-97b7-fa02e071fae0",
+   "metadata": {},
+   "source": [
+    "#### example prompt strategies"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f56fdd03-8002-422e-b23e-f046e4d8893a",
+   "metadata": {},
+   "source": [
+    "Chain-of-Thought Prompting (CoT):\n",
+    "* Give example question and answer before real question and answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b060ed84-a05f-4472-8d60-de0cb20c7c81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_context = \"ecDNA is usually smaller than chromosomes or nuclei\"\n",
+    "\n",
+    "question1 = \"Identify the count of ecDNA. Return a numerical answer only\"\n",
+    "img1 = \"2244.png\"\n",
+    "answer1 = \"0\"\n",
+    "\n",
+    "question2 = \"Identify the count of ecDNA. Return a numerical answer only\"\n",
+    "img2 = \"949.png\"\n",
+    "answer2 = \"2\"\n",
+    "\n",
+    "question = \"Identify the count of ecDNA. Return a numerical answer only\"\n",
+    "img = \"1730.png\"\n",
+    "\n",
+    "tokenizer = AutoTokenizer.from_pretrained('openbmb/MiniCPM-V-2', trust_remote_code=True)\n",
+    "model.eval()\n",
+    "full_image = os.path.join(file_path, img_path)\n",
+    "img = Image.open(full_image).convert('RGB')\n",
+    "\n",
+    "img_tif = img_path.split(\".\")[0] + \".tif\"\n",
+    "ground_truth = ground_truths.get(img_tif, 'Unknown')\n",
+    "\n",
+    "msgs = [{'role': 'user', 'content': question}]\n",
+    "\n",
+    "\n",
+    "res, context, _ = model.chat(\n",
+    "    image=img,\n",
+    "    msgs=msgs,\n",
+    "    context=img_context,\n",
+    "    tokenizer=tokenizer,\n",
+    "    sampling=True,\n",
+    "    temperature=temperature\n",
+    ")\n",
+    "save_to_csv(img_context, question, temperature, img_path, res, ground_truth, filename + \".csv\")\n",
+    "    \n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "281a54a8-5780-4f2f-a0f4-3eb42ab48c69",
+   "metadata": {},
+   "source": [
+    "Self-Consistency Prompting:\n",
+    "* Do multiple trials and aggregate results using a transform"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36d3dccc-48f4-44cc-aa20-7ed2741fc95a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Just do the code multiple times"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1066f317-4549-46cf-af32-af30fb818325",
+   "metadata": {},
+   "source": [
+    "Zero-Shot and Few-Shot Prompting:\n",
+    "* Zero-shot prompting uses no prior examples, relying solely on the model's pre-existing knowledge, while few-shot prompting provides a small number of examples to guide the model's response."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a726c53f-4621-4e6d-8dee-0c471fab8f7c",
+   "metadata": {},
+   "source": [
+    "Prompt Chaining:\n",
+    "* Use a series of prompts that build on each other to guide the model through a multi-step process or complex reasoning sequence."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bcf33293-3563-40d1-9902-e4a20db48468",
+   "metadata": {},
+   "source": [
+    "Meta-Prompting:\n",
+    "* Prompts that include instructions or goals about how to generate subsequent prompts."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2c209450-7708-459f-a50f-ac4967a6395c",
    "metadata": {},
    "source": [
@@ -169,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "5f484fc6-3ebc-4d05-8954-b8a129c3dac6",
    "metadata": {},
    "outputs": [],
@@ -199,7 +306,7 @@
     "        sampling=True,\n",
     "        temperature=temperature\n",
     "    )\n",
-    "    save_to_csv(img_context, question, img_path, res, ground_truth, filename + \".csv\")\n",
+    "    save_to_csv(img_context, question, temperature, img_path, res, ground_truth, filename + \".csv\")\n",
     "        \n",
     "    return res"
    ]
@@ -216,70 +323,44 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9c185b92-7d22-4e51-bac4-687eaf526e54",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing Images:  67%|██████▋   | 791/1189 [13:02<06:57,  1.05s/it]"
+      "Processing Images:   0%|          | 0/1189 [00:00<?, ?it/s]The `seen_tokens` attribute is deprecated and will be removed in v4.41. Use the `cache_position` model input instead.\n",
+      "Processing Images: 100%|██████████| 1189/1189 [20:36<00:00,  1.04s/it]\n",
+      "Processing Images: 100%|██████████| 1189/1189 [17:50<00:00,  1.11it/s]\n",
+      "Processing Images:  15%|█▍        | 177/1189 [02:57<12:15,  1.38it/s] "
      ]
     }
    ],
    "source": [
     "# vars to change, should be self explanatory, file_path is just test vs train\n",
     "# filename is where to save stuff\n",
-    "file_path = \"../test_im_data\"\n",
-    "temperature = 0.7\n",
-    "context = 'You are a pathologist examing cell imagery.'\n",
-    "question = 'Identify the count of ecDNA. Return a numerical answer only'\n",
-    "filename = 'test'\n",
     "\n",
-    "file_path_l = os.path.join(file_path, \"labels\")\n",
+    "context = 'ecDNA is usually smaller than chromosomes or nuclei'\n",
     "\n",
-    "ground_truth = load_ground_truths(file_path)\n",
-    "\n",
-    "files = [f for f in os.listdir(file_path_l) if f.endswith('.png')]\n",
-    "\n",
-    "\n",
-    "results = []\n",
-    "for img_str in tqdm(files, desc=\"Processing Images\"):\n",
-    "    res = eval_img(file_path_l, ground_truth, img_str, context, question, temperature, filename)\n",
-    "    results.append((img_str, res))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "2760b84b-46bb-4fa6-98c3-aa8c86e35e74",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# torch.manual_seed(100)\n",
-    "\n",
-    "# tokenizer = AutoTokenizer.from_pretrained('openbmb/MiniCPM-V-2', trust_remote_code=True)\n",
-    "\n",
-    "# image = Image.open('../sampled/11.png').convert('RGB')\n",
-    "\n",
-    "# # First round chat \n",
-    "# question = \"What is the landform in the picture?\"\n",
-    "# msgs = [{'role': 'user', 'content': [image, question]}]\n",
-    "\n",
-    "# answer = model.chat(\n",
-    "#     msgs=msgs,\n",
-    "#     tokenizer=tokenizer\n",
-    "# )\n",
-    "# print(answer)\n",
-    "\n",
-    "# # Second round chat, pass history context of multi-turn conversation\n",
-    "# msgs.append({\"role\": \"assistant\", \"content\": [answer]})\n",
-    "# msgs.append({\"role\": \"user\", \"content\": [\"What should I pay attention to when traveling here?\"]})\n",
-    "\n",
-    "# answer = model.chat(\n",
-    "#     msgs=msgs,\n",
-    "#     tokenizer=tokenizer\n",
-    "# )\n",
-    "# print(answer)"
+    "for i in range(5):\n",
+    "    file_path = \"../test_im_data\"\n",
+    "    temperature = 0.7\n",
+    "    question = 'Identify the count of ecDNA. Return a numerical answer only'\n",
+    "    filename = 'test'\n",
+    "    \n",
+    "    file_path_l = os.path.join(file_path, \"labels\")\n",
+    "    \n",
+    "    ground_truth = load_ground_truths(file_path)\n",
+    "    \n",
+    "    files = [f for f in os.listdir(file_path_l) if f.endswith('.png')]\n",
+    "    \n",
+    "    \n",
+    "    results = []\n",
+    "    for img_str in tqdm(files, desc=\"Processing Images\"):\n",
+    "        res = eval_img(file_path_l, ground_truth, img_str, context, question, temperature, filename)\n",
+    "        results.append((img_str, res))"
    ]
   },
   {
