--- a/pixtral/pixtral.ipynb
+++ b/pixtral/pixtral.ipynb
@@ -340,11 +340,61 @@
     "## Conclusions\n",
     "As we can see from the above input, the Pixtral-12b model is able to provide a quite detailed and somewhat coherent explanation of the image. It is able to reason why certain parts of the image are colored the way they are such as discussing relevant methods used to stain DNA."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tkinter as tk\n",
+    "\n",
+    "def load_text(file_path, tw):\n",
+    "    with open(file_path, 'r') as file:\n",
+    "        data = file.read()\n",
+    "        tw.insert(tk.END, data)\n",
+    "\n",
+    "root = tk.Tk()\n",
+    "root.title(\"LLM Outputs\")\n",
+    "\n",
+    "blip_label = tk.Label(root, text='Qwen Output')\n",
+    "blip_label.pack()\n",
+    "\n",
+    "text_widget_qwen = tk.Text(root, height=20, width=50)\n",
+    "text_widget_qwen.pack()  \n",
+    "\n",
+    "w = tk.Label(root, text='Pixtral Large Output')\n",
+    "w.pack()\n",
+    "\n",
+    "text_widget_pix = tk.Text(root, height=20, width=50)\n",
+    "text_widget_pix.pack()\n",
+    "\n",
+    "cpm_label = tk.Label(root, text='MiniCPM Output')\n",
+    "cpm_label.pack()\n",
+    "\n",
+    "text_widget_cpm = tk.Text(root, height=20, width=50)\n",
+    "text_widget_cpm.pack()\n",
+    "\n",
+    "\n",
+    "load_text('output.txt', text_widget_qwen)\n",
+    "load_text('/Users/mohit/Documents/GitHub/ecdna-analysis/blip/response.txt', text_widget_pix)\n",
+    "load_text('/Users/mohit/Documents/GitHub/ecdna-analysis/minicpm/sample_response.txt', text_widget_cpm)\n",
+    "\n",
+    "\n",
+    "root.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -358,7 +408,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
